# trivia_box_bot

./: README.md  main.py  pyproject.toml
app/database/: __init__.py  db_commands.py
app/handlers/: __init__.py  add_object.py  handler.py  search_del.py
app/keyboards/: __init__.py  buttons_reply.py  keyboard_reply.py
app/utils/: __init__.py  create_bot.py  state.py
